# mri_read

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
src/: analyze.py  claude_vision.py  dwi.py  engine.py  explore.py  manifest.py  mri.py  ollama_vision.py  qc.py  visualize.py
src/cmd/: agent.py  analyze.py  dwi.py  explore.py  manifest.py  qc.py  visualize.py
src/mri_read/: agent.py  analyze.py  claude_vision.py  config.py  dwi.py  engine.py  explore.py  manifest.py  mri.py  ollama_client.py  ollama_vision.py  paths.py  qc.py  visualize.py
src/mri_read/agent/: __init__.py  context.py  guard.py  pipeline.py  prompts.py  synthesis.py
src/mri_read/analyze/: __init__.py  images.py  png_encoding.py  ranking.py  report.py  report_json.py  report_markdown.py  select.py  slice_selection.py
src/mri_read/claude_vision/: __init__.py  dotenv.py  engine_impl.py  prompts.py
src/mri_read/config/: __init__.py  settings.py
src/mri_read/dwi/: __init__.py  adc.py  bucketing.py  loading.py  views.py
src/mri_read/engine/: __init__.py  base.py  factory.py  types.py
src/mri_read/explore/: __init__.py  discovery.py  headers.py  summary.py
src/mri_read/logging_setup/: __init__.py  configure.py
src/mri_read/manifest/: __init__.py  build.py  classify.py
src/mri_read/mri/: __init__.py  bvalue.py  foreground.py  geometry.py  listing.py  loading.py  tags.py  types.py  windowing.py
src/mri_read/ollama_client/: __init__.py  http.py  json_reply.py  models.py  (+1 more)
tests/: conftest.py
tests/mri_read/: test_no_dangerous_patterns.py
(+66 files in other folders)
