[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mri-read"
version = "0.1.0"
description = "MRI DICOM reading/analysis pipeline"
requires-python = ">=3.11"
# Runtime dependencies are pinned in requirements.txt (the single source of
# truth for versions); this package declares none of its own so `pip install
# -e .` only registers the mri_read package location, it never installs deps.

[tool.setuptools.packages.find]
where = ["src"]
include = ["mri_read*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# "data" = needs mri_test_data/ on disk (gitignored, not always present).
# "ollama" = needs a live local Ollama server with models pulled — real
# vision/text inference, seconds-to-minutes per test. Both are opt-in so
# `pytest` alone stays fast and runs anywhere; see tests/conftest.py.
markers = [
    "data: requires mri_test_data/ on disk",
    "ollama: requires a live local Ollama server (slow, real inference)",
]
